samples/_failures_safe/1761275393_3add15_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f502853.c: In function ‘display_compression_info’:
./samples/SAFE/__tmp_4f502853.c:142:5: error: expected expression at end of input
  142 |     for (
      |     ^~~
./samples/SAFE/__tmp_4f502853.c:142:5: error: expected declaration or statement at end of input
